crates/doodle-core/tests/snapshots/broken_syntax__09_unclosed_triple_string.snap
---
source: crates/doodle-core/tests/broken_syntax.rs
expression: "render_diagnostics(&diagnostics, &view)"
---
error[unterminated-string]: this triple-quoted string is never closed
  --> 09-unclosed-triple-string.doodle:1:12
1 | let poem = """
  |            ^^^
